
message mcp_appbean_proto
{
	optional string protocol = 1;
	optional int32 cmd = 2;
	optional string compact_uri = 3;
	optional int32 user_id = 4;
	optional int32 sequence = 5;
	optional int32 opt = 6;
	optional string user_context = 7;
	optional string content = 8;
	optional string epid = 9;
	optional int32 zip_flag = 10;
	optional string ip = 11;
	optional string category_name = 12;
}

message user_context 
{
	optional int32 sid = 1;
	optional string mobile_no = 2;
	optional string email = 3;
	optional string user_type_str = 4;
	optional string language = 5;
	optional string nick_name = 6;
	optional string region = 7;
	optional string last_logoff_time = 8;
	optional int32 user_id = 9;
	optional int32 logical_pool = 10;
	optional string epid = 11;
	optional string client_ip = 12;
	optional string client_version = 13;
	optional string client_platform = 14;
	optional string machine_code = 15;
	optional int32 apn_type = 16;
}

message retval 
{
	optional string option = 1;
}

message mobile_flow_event_args 
{
	optional string logoff_time = 1;
	optional string login_time =2;
	optional int32 owner_id = 3;
	optional int32 owner_sid = 4;
	optional int32 client_type = 5;
	optional string client_version = 6;
	optional int32 apn = 7;
	optional int64 upflow = 8;
	optional int64 downflow = 9;
	optional string owner_region = 10;
	optional string owner_carrier = 11;
	optional string ip_address = 12;
}
